--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main class="container">
-      <h1><span>💙</span> Factorial App</h1>
+      <h1><img src="public/vite.svg" alt="Vite" height="60" width="60" /> Factorial App</h1>
 
       <form>
         <label for="number">
